crates/sid-widgets/tests/snapshots/workspaces_render__workspaces_empty_default.snap
---
source: crates/sid-widgets/tests/workspaces_render.rs
expression: s
---
┌ Workspaces ──────────┐┌ Branches ────────────────────────────────────────────┐
│no workspaces yet — pr││(no branches loaded — select a workspace)             │
│                      ││                                                      │
│  or, from a shell: si││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
└──────────────────────┘└──────────────────────────────────────────────────────┘
