crates/sid-widgets/tests/snapshots/workspaces_render__workspaces_one_repo_branches.snap
---
source: crates/sid-widgets/tests/workspaces_render.rs
expression: s
---
┌ Workspaces ──────────┐┌ Branches ────────────────────────────────────────────┐
│> · myrepo            ││(no branches loaded — select a workspace)             │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
└──────────────────────┘└──────────────────────────────────────────────────────┘
